Finish auth integration and improve code